fix downloads page overflow shifting top-margin

--- a/css/navigation.css
+++ b/css/navigation.css
@@ -37,6 +37,7 @@
 
 [class*="downloads_DownloadsPage_"] {
   margin-top: 38px !important; /* NOT BEING HAPPY SOMETIMES */
+  overflow-y: hidden !important;
 }
 
 [class*="library_AppDetailsMain_"] {
